--- a/ondecomeçar.html
+++ b/ondecomeçar.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="icone/p.ico" type="image/x-icon">
     
 <title>Polyworld</title>
 <style>
